add compose deployment cancelation
