# backend/internal/gateway/model/build.go
@@ -1,14 +1,16 @@
 package model
 
 type Build struct {
-	ID            string
-	ImageID       string
-	Status        string
-	StartedAt     int64
-	FinishedAt    int64
-	LogFilePath   string
-	OwnerID       string
-	OwnerUsername string
+	ID                 string
+	ImageID            string
+	ProjectID          string
+	ProjectServiceName string
+	Status             string
+	StartedAt          int64
+	FinishedAt         int64
+	LogFilePath        string
+	OwnerID            string
+	OwnerUsername      string
 }
 
 type PaginatedBuilds struct {
